# metadata-schemas

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  json_to_python_config.yaml  pyproject.toml  swagger.yaml
excel_sheets/: Document_metadata.xlsx  Geospatial_metadata.xlsx  Image_metadata.xlsx  Indicator_metadata.xlsx  Indicators_db_metadata.xlsx  Microdata_metadata.xlsx  Resource_metadata.xlsx  Script_metadata.xlsx  Series_metadata.xlsx  Survey_metadata.xlsx  Survey_microdata_metadata.xlsx  Table_metadata.xlsx  Timeseries_DB_metadata.xlsx  Timeseries_db_metadata.xlsx  Timeseries_metadata.xlsx  Video_metadata.xlsx
pydantic_schemas/: document-schema.py  document_schema.py  excel_interface.py  excel_to_pydantic.py  generate_pydantic_schemas.py  geospatial-schema.py  geospatial_schema.py  image-schema.py  image_schema.py  indicator_schema.py  indicators_db_schema.py  metadata_manager.py  microdata-schema.py  microdata_schema.py  pydantic_to_excel.py  quick_start.py  resource_schema.py  schema_base_model.py  schema_interface.py  script-schema.py  script_schema.py  series-schema.py  series_schema.py  table-schema.py  table_schema.py  timeseries-db-schema.py  timeseries-schema.py  timeseries_db_schema.py  timeseries_schema.py  utils.py  video-schema.py  video_schema.py
pydantic_schemas/definitions/: document_schema.py  geospatial_schema.py  image_schema.py  microdata_schema.py  script_schema.py  series_schema.py  table_schema.py  timeseries_db_schema.py  timeseries_schema.py  video_schema.py
pydantic_schemas/generators/: generate_excel_files.py  generate_pydantic_schemas.py
pydantic_schemas/tests/: test_enums.py  test_excel_interface.py  test_generators.py  test_metadata_manager.py  test_pydantic_to_excel.py  test_pydantic_to_pandas.py  test_quick_start.py  test_template_to_pydantic.py
pydantic_schemas/utils/: enum_with_value_or_key.py  excel_to_pydantic.py  generate_pydantic_schemas.py  pydantic_to_excel.py  quick_start.py  schema_base_model.py  template_to_pydantic.py  test_utils.py  utils.py
schemas/: ddi-schema.json  document-schema.json  geospatial-schema.json  image-schema.json  iptc-phovidmdshared-schema.json  iptc-pmd-schema.json  microdata-schema.json  script-schema.json  table-schema.json  timeseries-schema.json  video-schema.json
