[tool.poetry]
name = "metadataschemas"
version = "0.1.15"
description = ""
authors = ["Mehmood Asghar <masghar@worldbank.org>", "Gordon Blackadder <gblackadder@worldbank.org>"]
readme = "README.md"
packages = [
    { include = "*_schema.py", from = "pydantic_schemas", to = "metadataschemas"},
    { include = "schema_base_model.py", from = "pydantic_schemas", to = "metadataschemas"},
    { include = "excel_interface.py", from = "pydantic_schemas", to = "metadataschemas"},
    { include = "utils", from = "pydantic_schemas", to = "metadataschemas"},
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pydantic = "^2.8.0"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"
isort = "^5.13.2"
ruff = "^0.5.0"
black = "^24.4.2"
detect-secrets = "^1.5.0"
ipykernel = "^6.29.5"
datamodel-code-generator = "^0.25.9"

[tool.ruff]
line-length = 120
fix = true
exclude = [
    "pydantic_schemas/**"
]

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.detect-secrets]
exclude-lines = "\\s*\"image/png\": \".+\""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
