[tool.poetry]
name = "metadataschemas"
version = "0.1.0"
description = ""
authors = ["Mehmood Asghar <masghar@worldbank.org>", "Gordon Blackadder <gblackadder@worldbank.org>"]
readme = "README.md"
packages = [
    { include = "*_schema.py", from = "pydantic_schemas", to = "metadataschemas"},
    { include = "metadata_manager.py", from = "pydantic_schemas", to = "metadataschemas"},
    { include = "utils", from = "pydantic_schemas", to = "metadataschemas"},
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.0"
pydantic = "^2.8.0"
openpyxl = "^3.1.5"
certifi = "^2024.8.30"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"
ruff = "^0.5.0"
detect-secrets = "^1.5.0"
ipykernel = "^6.29.5"
datamodel-code-generator = "^0.25.9"

[tool.ruff]
fix = true
exclude = [
    "pydantic_schemas/*_schema.py"
]

[tool.detect-secrets]
exclude-lines = "\\s*\"image/png\": \".+\""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
